<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.silentnuke.bits.wallet.feature.addcard.AddCardViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/card_form_cardholder_name">

                <com.braintreepayments.cardform.view.CardholderNameEditText
                    android:id="@+id/card_form_cardholder_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bt_form_hint_cardholder_name"
                    android:text="@={viewmodel.holder}"
                    app:errorMessage="@={viewmodel.holderError}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_field_margin"
                android:labelFor="@+id/card_form_card_number">

                <com.braintreepayments.cardform.view.CardEditText
                    android:id="@+id/card_form_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bt_form_hint_card_number"
                    android:inputType="number"
                    android:text="@={viewmodel.cardNumber}"
                    app:errorMessage="@={viewmodel.cardNumberError}" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_field_margin"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@+id/card_form_expiration">

                    <com.braintreepayments.cardform.view.ExpirationDateEditText
                        android:id="@+id/card_form_expiration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bt_form_hint_expiration"
                        android:text="@={viewmodel.expirationDate}"
                        app:errorMessage="@={viewmodel.expirationDateError}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_field_margin"
                    android:layout_weight="1"
                    android:labelFor="@+id/card_form_cvv">

                    <com.braintreepayments.cardform.view.CvvEditText
                        android:id="@+id/card_form_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bt_form_hint_cvv"
                        android:text="@={viewmodel.cvv}"
                        app:errorMessage="@={viewmodel.cvvError}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
