...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefreshListener="@{viewmodel::refresh}"
        app:refreshing="@{viewmodel.dataLoading}">

        <RelativeLayout
            android:id="@+id/cards_container_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cards_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}"
                app:items="@{viewmodel.items}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

...
